--- a/uklady-cyfrowe-i-systemy-wbudowane/lab2/zad2/zad2_summary.html
+++ b/uklady-cyfrowe-i-systemy-wbudowane/lab2/zad2/zad2_summary.html
@@ -7,6 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>zad2.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -72,5 +73,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/04/2011 - 16:35:01</center>
+<br><center><b>Date Generated:</b> 10/09/2011 - 23:24:03</center>
 </BODY></HTML>
