--- a/uklady-cyfrowe-i-systemy-wbudowane/lab2/zad1/zad1_summary.html
+++ b/uklady-cyfrowe-i-systemy-wbudowane/lab2/zad1/zad1_summary.html
@@ -7,6 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab1.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -72,5 +73,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/04/2011 - 16:34:15</center>
+<br><center><b>Date Generated:</b> 10/08/2011 - 23:47:19</center>
 </BODY></HTML>
