--- a/uklady-cyfrowe-i-systemy-wbudowane/lab6/lab6/counter_summary.html
+++ b/uklady-cyfrowe-i-systemy-wbudowane/lab6/lab6/counter_summary.html
@@ -7,6 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab6.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -72,5 +73,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/13/2011 - 13:38:21</center>
+<br><center><b>Date Generated:</b> 11/13/2011 - 13:53:39</center>
 </BODY></HTML>
