--- a/uklady-cyfrowe-i-systemy-wbudowane/lab-ps2-spartan-last/lab7/counter1_summary.html
+++ b/uklady-cyfrowe-i-systemy-wbudowane/lab-ps2-spartan-last/lab7/counter1_summary.html
@@ -7,6 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab7.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -80,5 +81,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 01/05/2012 - 23:46:48</center>
+<br><center><b>Date Generated:</b> 01/06/2012 - 00:01:06</center>
 </BODY></HTML>
